# Nimble

./: .gitignore  .gitmodules  CMakeLists.txt  Nimble.xcconfig  README.md  addLicenseHeader.py  archive-sign.sh  build-plugin-package.sh  build.sh  build.xcconfig  header.txt  plugin.xcconfig  scadeBuild.sh  target_sources.py
Nimble/: CMakeLists.txt  build.xcconfig
Nimble/Nimble/: AppDelegate.swift  Info.plist  Info.plist.cmake.in  Nimble.xcconfig  ProjectDocument.swift  exportOptionsPlist.plist
Nimble/Nimble.xcodeproj/: project.pbxproj
Nimble/Nimble.xcodeproj/xcshareddata/xcschemes/: Nimble-Archive.xcscheme  Nimble-Release.xcscheme  Nimble.xcscheme  Scade-Release.xcscheme  Scade.xcscheme
Nimble/Nimble/Assets.xcassets/AppIcon.appiconset/: Contents.json
Nimble/Nimble/Assets.xcassets/ButtonIconColor.colorset/: Contents.json
Nimble/Nimble/Assets.xcassets/ScadeAppIcon.appiconset/: Contents.json
Nimble/Nimble/Assets.xcassets/SelectedSegmentColor.colorset/: Contents.json
Nimble/Nimble/Assets.xcassets/bottomArea.imageset/: Contents.json
Nimble/Nimble/Assets.xcassets/debugAreaBar.symbolset/: Contents.json
Nimble/Nimble/Assets.xcassets/doc.plaintext.symbolset/: Contents.json
Nimble/Nimble/Assets.xcassets/exclamationmark.triangle.symbolset/: Contents.json
Nimble/Nimble/Assets.xcassets/leftSideBar.imageset/: Contents.json
Nimble/Nimble/Assets.xcassets/rightSideBar.imageset/: Contents.json
Nimble/Nimble/Assets.xcassets/sidebar.left.imageset/: Contents.json
Nimble/Nimble/Assets.xcassets/sidebar.right.imageset/: Contents.json
Nimble/Nimble/Base.lproj/: Main.storyboard
Nimble/NimbleCore/: Package.swift
Nimble/NimbleCore/Sources/NimbleCore/: Command.swift  Console.swift  Diagnostic.swift  Document.swift  File.swift  Folder.swift  Menu.swift  Plugin.swift  Project.swift  Workbench.swift
Nimble/Scade/: AppDelegate.swift  Info.plist
Nimble/Scade/Assets.xcassets/leftSideBar.imageset/: Contents.json
Nimble/Scade/Base.lproj/: Main.storyboard
Nimble/Sources/: AppDelegate.swift  BinaryFileDocument.swift  CMakeLists.txt  ConsoleViewController.swift  ConsoleViewController.xib  DebugViewController.swift  DropView.swift  EditorViewController.swift  HorizontalRootSplitViewController.swift  NavigatorViewController.swift  NimbleController.swift  NimbleWorkbench.swift  NimbleWorkbenchArea.swift  ProjectDelegate.swift  ProjectDocument.swift  SettingsDocument.swift  TabbedEditorController.swift  WorkbenchArea.swift  WorkbenchContentView.swift  WorkbenchSettings.swift  WorkbenchViewController.swift
Nimble/Sources/Commands/: CMakeLists.txt  ZoomCommands.swift
Nimble/Sources/Controllers/: CMakeLists.txt  CommandsController.swift  IconsController.swift  SettingsController.swift
Nimble/Sources/Controls/: CMakeLists.txt  ConsoleView.swift  ConsoleView.xib  DebugView.swift  DiagnosticStatusBar.swift  DiagnosticStatusBar.xib  DiagnosticStatusView.swift  DiagnosticView.swift  DiagnosticView.xib  DiagnosticsView.swift  DropView.swift  EditorSplitView.swift  EditorView.swift  InspectorView.swift  NavigatorView.swift  NimbleSidebarArea.swift  NimbleStatusBar.swift  NimbleStatusBar.xib  RootSplitView.swift  SettingsEditor.swift  SettingsEditor.xib  StatusBar.swift  StatusBarView.swift  TabbedEditor.swift  TabbedEditor.xib  TabbedEditorController.xib  Toolbar.swift  ToolbarTargetControl.swift  ToolbarTargetControl.xib  UnsupportedPane.swift  UnsupportedPane.xib  WorkbenchSidebar.swift  WorkbenchSidebar.xib  WorkbenchToolbar.swift
Nimble/Sources/Controls/ActionArea/: ActionAreaBar.xib  ActionAreaView.swift  CMakeLists.txt
Nimble/Sources/Controls/DiagnosticView/: CMakeLists.txt  DiagnosticView.swift  WorkbenchDiagnosticMock.swift
Nimble/Sources/Controls/OutlineView/: FileItemView.swift  HostedNimbleOutlineView.swift  NimbleOutlineSwiftUIView.swift
Nimble/Sources/Controls/SeparatorView/: CMakeLists.txt  SeparatorView.swift
Nimble/Sources/Controls/TabbedEditor/: CMakeLists.txt  TabbedEditor.swift  TabbedEditor.xib  TabbedEditorViewModel.swift
Nimble/Sources/Controls/Wizard/: CMakeLists.txt  WizardView.swift  WizardView.xib
Nimble/Sources/Extensions/: Bundle.swift  CMakeLists.txt  Command+Menu.swift  Command+Toolbar.swift  Command+ToolbarDelegate.swift  Command.swift  Document.swift  KeyboardShortcut.swift  NSOpenPanel.swift
NimbleCore/: CMakeLists.txt  Package.swift
NimbleCore/SPM/: Package.swift
NimbleCore/Sources/: CMakeLists.txt
NimbleCore/Sources/NimbleCore/: CMakeLists.txt  Command.swift  Console.swift  Diagnostic.swift  Theme.swift
NimbleCore/Sources/NimbleCore/Extensions/: Array.swift  CMakeLists.txt  Decoders.swift  NSApplication.swift  NSImage.swift  (+4 more)
Plugins/BuildSystem/: CMakeLists.txt  Info.plist  build.xcconfig  package.yml
Plugins/BuildSystem/BuildSystem/: Info.plist
Plugins/BuildSystem/BuildSystem.xcodeproj/: project.pbxproj
Plugins/BuildSystem/Extensions/: Workbench.swift
Plugins/BuildSystem/Sources/: AutoBuild.swift  Automatic.swift  AutomaticBuildTool.swift  BuildSystem.swift  BuildSystemCommand.swift  BuildSystemModule.swift  BuildSystemTask.swift  BuildTool.swift  Commands.swift  Plugin.swift  SPMBuildSystem.swift  ShellBuildTool.swift  SwiftBuildSystem.swift  SwiftBuildTool.swift  Target.swift  Tasks.swift
Plugins/CodeEditor/CodeEditor/: CMakeLists.txt  Info.plist  build.xcconfig
Plugins/LSPClient/: CMakeLists.txt  Info.plist  build.xcconfig  package.yml
Plugins/LSPClient/LSPClient.xcodeproj/: project.pbxproj
Plugins/LSPClient/Sources/: LSPClient.swift  LSPConnector.swift  LSPDiagnostic.swift  LSPServer.swift  LSPWorkbenchConnector.swift  Plugin.swift  main.swift
Plugins/SwiftExtensions/: CMakeLists.txt  Info.plist  build.xcconfig  package.yml
Plugins/SwiftExtensions/Sources/: LocalServer.swift  Plugin.swift  SPMBuildSystem.swift  SPMGenerator.swift  SPMGeneratorView.swift  SPMGeneratorView.xib  SPMWizard.swift  SPMWizardView.swift  SPMWizardView.xib  SwiftBuildSystem.swift  SwiftExtensions.swift  SwiftLanguageService.swift  SwiftToolchain.swift
Plugins/SwiftExtensions/SwiftExtensions.xcodeproj/: project.pbxproj
(+728 files in other folders)
